--- a/src/app/modules/barchart/barchart.component.scss
+++ b/src/app/modules/barchart/barchart.component.scss
@@ -2,3 +2,46 @@
   max-width: 100%;
   max-height: 225px;
 }
+
+.year-selector {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.year-selector .arrow-left,
+.year-selector .arrow-right {
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.year-selector span {
+  margin: 0 10px;
+  font-size: 18px;
+}
+
+.chart-container {
+  text-align: center;
+}
+
+.label-date-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.arrow-left,
+.arrow-right {
+  cursor: pointer;
+}
+
+.chart-wrapper {
+  margin-top: 20px;
+}
+
+.card-footer {
+  text-align: center;
+  margin-top: 20px;
+}
