--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -1,13 +1,16 @@
 <div class="tiles-container">
     <div class="tile" *ngFor="let card of cardData">
         <div class="tile-content">
-            <div class="title">{{ card.title }}</div>
-            <div class="description">{{ card.description }}</div>
-            <div class="image-container">
-                <img class="image" [src]="card.imageUrl" [alt]="card.title" />
+            <div class="content">
+                <div class="title">{{ card.title }}</div>
+                <div class="description">{{ card.description }}</div>
+                <div class="image-container">
+                    <img class="image" [src]="card.imageUrl" [alt]="card.title" />
+                </div>
             </div>
+            <!-- Button moved outside of the content and placed at the bottom -->
             <div class="button-container">
-                <button (click)="navigate(card.buttonAction)">
+                <button class="card-button" (click)="navigate(card.buttonAction)">
                     {{ card.buttonLabel }}
                 </button>
             </div>
