--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,27 +1,28 @@
+@import '../../../styles/shared-styles.scss';
+
 .dashboard-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include respond-to(large) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
 }
 
 .dashboard-content {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  max-width: calc(100% - 40px);
-}
-
-.dashboard-title {
-  text-align: center;
-  margin-bottom: 20px;
+  @include respond-to(large) {
+    width: 100%;
+    box-sizing: border-box;
+    max-width: 1200px;
+  }
 }
 
 .dashboard-items {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   width: 100%;
+  padding: 20px;
 }
 
 .row {
@@ -37,24 +38,25 @@
 .double-item {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
   width: 100%;
 }
 
-.double-item>* {
+.double-item > * {
   flex: 1;
   max-width: 600px;
-  /* Optional: limit the max width of each card */
+  margin: 20px;  
 }
 
 @media only screen and (max-width: 1200px) {
   .double-item {
     flex-direction: column;
     align-items: center;
+    gap: 20px;  
   }
 
-  .double-item>* {
+  .double-item > * {
     max-width: 100%;
-    margin: 10px 0;
+    margin: 20px 0;
   }
 }
