--- a/src/app/modules/limit-form/limit-form.component.html
+++ b/src/app/modules/limit-form/limit-form.component.html
@@ -9,10 +9,10 @@
     </div>
 
     <div class="form-group">
-      <label for="salaryDay">Начало отсчета:</label>
-      <input formControlName="salaryDay" type="number" id="salaryDay" required placeholder="Введите день начала отсчета (1-31)">
-      <div *ngIf="isFieldInvalid('salaryDay')" class="error-message">Обязательное поле</div>
-      <div *ngIf="limitForm.get('salaryDay')?.errors?.['min'] || limitForm.get('salaryDay')?.errors?.['max']" class="error-message">Введите число от 1 до 31</div>
+      <label for="createdAt">Начало отсчета:</label>
+      <input formControlName="createdAt" type="number" id="createdAt" required min="1" placeholder="Введите день начала отсчета (1-31)">
+      <div *ngIf="isFieldInvalid('createdAt')" class="error-message">Обязательное поле</div>
+      <div *ngIf="limitForm.get('createdAt')?.errors?.['min'] || limitForm.get('createdAt')?.errors?.['max']" class="error-message">Введите число от 1 до 31</div>
     </div>
 
     <div class="form-group">
