--- a/src/app/modules/login/login/login.component.scss
+++ b/src/app/modules/login/login/login.component.scss
@@ -1,163 +1,104 @@
-// Variables
-$primary-color: #007bff;
-$background-color: #f9f9f9;
-$button-background: #38393d;
-$text-color: #fff;
-$input-border-color: #ccc;
-$padding: 15px;
-$border-radius: 5px;
-$font-size-large: 1.2em;
+// login.component.scss
 
-// Mixin for media queries
-@mixin respond-to($breakpoint) {
-  @if $breakpoint ==small {
-    @media (min-width: 576px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==medium {
-    @media (min-width: 768px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==large {
-    @media (min-width: 992px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==xlarge {
-    @media (min-width: 1200px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==xxlarge {
-    @media (min-width: 1600px) {
-      @content;
-    }
-  }
-}
+@import '../../../../styles/shared-styles.scss';
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   padding: 20px;
+}
+
+.login-form {
+  @include form-container; // Apply form-container mixin
+  text-align: left; // Align form content to the left
+  background-color: #F0F0F0; // Change background color
 
   header {
     margin-bottom: 20px;
   }
 
-  .login-form {
-    background-color: $background-color;
-    padding: $padding * 1.5;
-    border-radius: $border-radius;
-    width: 90%;
-    max-width: 320px;
-    margin-top: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  .form-group {
+    margin-top: var(--padding);
 
-    .form-group {
-      margin-top: $padding;
-
-      label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-      }
-
-      input {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid $input-border-color;
-        border-radius: $border-radius;
-        box-sizing: border-box;
-      }
-
-
-      .password-container {
-        position: relative;
-        width: 100%;
-      }
-
-      .password-container input {
-        width: 100%;
-        padding-right: 30px;
-      }
-
-      .password-container .toggle-password {
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        cursor: pointer;
-        color: #aaa;
-      }
-
-      .password-container .toggle-password:hover {
-        color: #000;
-      }
+    label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
 
-    button {
+    input {
+      @include input-styles; // Include input styles from shared-styles.scss
+    }
+
+    .password-container {
+      position: relative;
       width: 100%;
-      padding: 10px;
-      background-color: $button-background;
-      color: $text-color;
-      border: none;
-      border-radius: $border-radius;
+    }
+
+    .password-container input {
+      width: 100%;
+      padding-right: 30px;
+    }
+
+    .password-container .toggle-password {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
       cursor: pointer;
-      margin-top: 10px;
-      font-size: 1em;
+      color: #aaa;
     }
 
-    .register-link {
-      margin-top: $padding;
-      text-align: center;
-
-      p {
-        margin-bottom: 5px;
-      }
-
-      a {
-        color: $primary-color;
-        text-decoration: none;
-      }
+    .password-container .toggle-password:hover {
+      color: #000;
     }
   }
 
-  @include respond-to(small) {
-    .login-form {
-      max-width: 350px;
-    }
+  button {
+    @include primary-button; // Apply primary button styles from shared-styles.scss
+    width: 100%;
+    margin-top: 10px;
+    font-size: 1rem;
   }
 
-  @include respond-to(medium) {
-    .login-form {
-      max-width: 400px;
+  .register-link {
+    margin-top: var(--padding);
+    text-align: center;
+
+    p {
+      margin-bottom: 5px;
     }
   }
+}
 
-  @include respond-to(large) {
-    .login-form {
-      max-width: 450px;
-    }
+@include respond-to(small) {
+  .login-form {
+    max-width: 350px;
   }
+}
 
-  @include respond-to(xlarge) {
-    .login-form {
-      max-width: 500px;
-    }
+@include respond-to(medium) {
+  .login-form {
+    max-width: 400px;
   }
+}
 
-  @include respond-to(xxlarge) {
-    .login-form {
-      max-width: 550px;
-    }
+@include respond-to(large) {
+  .login-form {
+    max-width: 450px;
+  }
+}
+
+@include respond-to(xlarge) {
+  .login-form {
+    max-width: 500px;
+  }
+}
+
+@include respond-to(xxlarge) {
+  .login-form {
+    max-width: 550px;
   }
 }
