--- a/src/app/modules/registration/registration/registration.component.scss
+++ b/src/app/modules/registration/registration/registration.component.scss
@@ -1,52 +1,12 @@
-// Variables
-$primary-color: #007bff;
-$background-color: #f9f9f9;
-$button-background: #38393d;
-$text-color: #fff;
-$input-border-color: #ccc;
-$padding: 15px;
-$border-radius: 5px;
-$font-size-large: 1.2em;
+// login.component.scss
 
-// Mixin for media queries
-@mixin respond-to($breakpoint) {
-  @if $breakpoint ==small {
-    @media (min-width: 576px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==medium {
-    @media (min-width: 768px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==large {
-    @media (min-width: 992px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==xlarge {
-    @media (min-width: 1200px) {
-      @content;
-    }
-  }
-
-  @else if $breakpoint ==xxlarge {
-    @media (min-width: 1600px) {
-      @content;
-    }
-  }
-}
+@import '../../../../styles/shared-styles.scss';
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   padding: 20px;
 
   header {
@@ -54,16 +14,11 @@ $font-size-large: 1.2em;
   }
 
   .registration-form {
-    background-color: $background-color;
-    padding: $padding * 1.5;
-    border-radius: $border-radius;
-    width: 90%;
-    max-width: 320px;
-    margin-top: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    @include form-container; // Apply form-container mixin
+    background-color: #F0F0F0; // Change background color
 
     .form-group {
-      margin-top: $padding;
+      margin-top: var(--padding);
 
       label {
         display: block;
@@ -72,11 +27,7 @@ $font-size-large: 1.2em;
       }
 
       input {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid $input-border-color;
-        border-radius: $border-radius;
-        box-sizing: border-box;
+        @include input-styles; // Include input styles from shared-styles.scss
       }
 
       .password-container {
@@ -104,19 +55,14 @@ $font-size-large: 1.2em;
     }
 
     button {
+      @include primary-button; // Apply primary button styles from shared-styles.scss
       width: 100%;
-      padding: 10px;
-      background-color: $button-background;
-      color: $text-color;
-      border: none;
-      border-radius: $border-radius;
-      cursor: pointer;
       margin-top: 10px;
-      font-size: 1em;
+      font-size: 1rem;
     }
 
     .login-link {
-      margin-top: $padding;
+      margin-top: var(--padding);
       text-align: center;
 
       p {
@@ -124,7 +70,7 @@ $font-size-large: 1.2em;
       }
 
       a {
-        color: $primary-color;
+        color: var(--primary-color);
         text-decoration: none;
       }
     }
