--- a/src/app/modules/barchart/barchart.component.html
+++ b/src/app/modules/barchart/barchart.component.html
@@ -1,3 +1,4 @@
+<!-- bar chart component html -->
 <div class="year-selector">
   <div class="arrow-left" (click)="switchYear(displayedYear - 1)">
     <i class="bi bi-arrow-left"></i>
